--- a/src/scss/component/Hero-image-with-bubbles.scss
+++ b/src/scss/component/Hero-image-with-bubbles.scss
@@ -60,7 +60,7 @@ bubbles-container{
                 background-clip: content-box,border-box;
                 border-radius: 50px;
                 width: 71px;
-                aspect-ratio: 1;
+                height: 71px;
                 img{
                     width: 100%;
                     height: 100%;
